# pingus-allegro

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.am  Makefile.dos  Makefile.in  Makefile.linux  SConstruct  configure  configure.in  game.cc  game.hh  gui_obj.cc  gui_obj.hh  init.cc  init.hh  intro.cc  intro.hh  level.cc  level.hh  levelmap.cc  levelmap.hh  pingu.cc  pingu.hh  pingus.cc  pingus.hh  pingus.scr  playfield.cc  playfield.hh  world.cc  world.hh
images/: PINGU_FALLing.PCX  pingu.pcx
levels/: 1.pcx  1_gfx.pcx
