bin_PROGRAMS = pingus
pingus_SOURCES = pingus.cc \
                 intro.cc  \
                 init.cc   \
                 game.cc   \
                 level.cc  \
                 world.cc  \
                 playfield.cc \
                 pingu.cc     \
                 gui_obj.cc   
VERSION = 0.0.0
PACKAGE = pingus
LDADD = clan X11 vga lz Xext 
INCLUDES = -I/usr/src
