dnl Process this file with autoconf to produce a configure script.
AM_INIT_AUTOMAKE(pingus, 0.0)
AC_INIT(pingus.cc)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_LIB(clan, main,,, -L/usr/X11R6/lib -lz -lX11 -lXext -lvga /usr/lib/libz.a)
dnl AC_CHECK_LIB(X11, main)
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
